3.5.3/_sources/gallery/scales/index.rst.txt


.. _sphx_glr_gallery_scales:

.. _scales_examples:

Scales
======

These examples cover how different scales are handled in Matplotlib.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Loglog Aspect">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_aspect_loglog_thumb.png
    :alt: Loglog Aspect

  :ref:`sphx_glr_gallery_scales_aspect_loglog.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loglog Aspect</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a custom scale, by implementing the scaling use for latitude data in a Mercator Projecti...">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_custom_scale_thumb.png
    :alt: Custom scale

  :ref:`sphx_glr_gallery_scales_custom_scale.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom scale</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting a bar chart with a logarithmic y-axis.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_log_bar_thumb.png
    :alt: Log Bar

  :ref:`sphx_glr_gallery_scales_log_bar.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Log Bar</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Examples of plots with logarithmic axes.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_log_demo_thumb.png
    :alt: Log Demo

  :ref:`sphx_glr_gallery_scales_log_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Log Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example of assigning a log-scale for the x-axis using ~.axes.Axes.semilogx.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_log_test_thumb.png
    :alt: Log Axis

  :ref:`sphx_glr_gallery_scales_log_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Log Axis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Examples of plots with logit axes.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_logit_demo_thumb.png
    :alt: Logit Demo

  :ref:`sphx_glr_gallery_scales_logit_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Logit Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Various normalization on a multivariate normal distribution.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_power_norm_thumb.png
    :alt: Exploring normalizations

  :ref:`sphx_glr_gallery_scales_power_norm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exploring normalizations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Illustrate the scale transformations applied to axes, e.g. log, symlog, logit.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_scales_thumb.png
    :alt: Scales

  :ref:`sphx_glr_gallery_scales_scales.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scales</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example use of symlog (symmetric log) axis scaling.">

.. only:: html

  .. image:: /gallery/scales/images/thumb/sphx_glr_symlog_demo_thumb.png
    :alt: Symlog Demo

  :ref:`sphx_glr_gallery_scales_symlog_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Symlog Demo</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/scales/aspect_loglog
   /gallery/scales/custom_scale
   /gallery/scales/log_bar
   /gallery/scales/log_demo
   /gallery/scales/log_test
   /gallery/scales/logit_demo
   /gallery/scales/power_norm
   /gallery/scales/scales
   /gallery/scales/symlog_demo

